syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/grpc/bots";
package bots;
import "google/protobuf/empty.proto";

service Bots {
	rpc DeleteMessage(DeleteMessagesRequest) returns (google.protobuf.Empty) {}
	rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {}
	rpc Join(JoinOrLeaveRequest) returns (google.protobuf.Empty) {}
	rpc Leave(JoinOrLeaveRequest) returns (google.protobuf.Empty) {}
}

message DeleteMessagesRequest {
	string channelId = 1;
	string channelName = 2;
	repeated string messageIds = 3;
}

message SendMessageRequest {
	string channelId = 1;
	optional string channelName = 2;
	string message = 3;
	optional bool isAnnounce = 4;
	bool skip_rate_limits = 5;
	optional string reply_to = 6;
}

message JoinOrLeaveRequest {
	string botId = 2;
	string userName = 3;
	string user_id = 4;
}
